# uuid7

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  uuid7.pc.in
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  bench_compare.c  bench_uuid7.c
bindings/golang/: README.md  go.mod  prng.c  uuid7.go  uuid7.h  uuid7_core.c  uuid7_test.go
bindings/python/: README.md  setup.py  uuid7_ffi_build.py
bindings/python/tests/: test_uuid7.py
bindings/python/uuid7/: __init__.py  _ffi.py
bindings/python/uuid7/csrc/: clock.c  internal.h  uuid7_core.c
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/csrc/: prng.c  uuid7.h
bindings/rust/examples/: basic.rs
bindings/rust/src/: lib.rs
bindings/wasm/: README.md  index.html  test.js  uuid7.js  uuid7.wasm  uuid7_wasm.c  uuid7_wasm.js
docs/: API.md
examples/: basic_usage.c
src/: clock.c  internal.h  prng.c  uuid7.c
tests/: CMakeLists.txt  test_clock_backward.c  test_rfc9562.c  test_stress.c  test_stress_mt.c  test_uuid7.c
